# api

./: .cproject  .project  CMakeLists.txt  README.md
include/api/: module.h  platform.h  types.h
src/: module.cpp  platform.cpp
